lang/tests/collaboration/ui/fail/01-no-signers.stderr
error: this contract has no signers
 --> $DIR/01-no-signers.rs:5:5
  |
5 | /     #[liquid(contract)]
6 | |     pub struct Noop {
7 | |         addr: address
8 | |     }
  | |_____^
